ec2 instance.tf
resource "aws_instance" "demoinstance" {
ami  = "ami-087c17d1fe0178315"
instance_type = "t2.micro"
count = 1
key_pair = "tests"
security_group_ids = aws_security_group.demosg.id
subnet_id = aws_subnet.public-subnet-1.id
associate_public_ip_address = true
user_data = file(data.sh)
tags = {
  Name = " my instance1 "
    }
  }
